--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "illuminate/database": "^8.0",
         "illuminate/http": "^8.0",
         "intonate/tinker-zero": "^1.2",
+        "laminas/laminas-text": "^2.8",
         "laravel-zero/framework": "^8.7",
         "thenetworg/oauth2-azure": "^2.0"
     },
