--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.0",
+        "doctrine/dbal": "^3.1",
         "guzzlehttp/guzzle": "^6.5.5",
         "illuminate/database": "^8.0",
         "illuminate/http": "^8.0",
