--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,31 @@
 {
-    "name": "laravel-zero/laravel-zero",
-    "description": "The Laravel Zero Framework.",
-    "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
+    "name": "turtlebytes/fire",
+    "description": "Work with the main task management systems like jira, azure, and aha",
+    "keywords": ["jira", "azure", "aha", "task management management", "console", "cli"],
+    "homepage": "https://github.com/zach2825/dumpster-fire",
     "type": "project",
     "license": "MIT",
-    "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
-    },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "Zach Robichaud",
+            "email": "zach2825@gmail.com"
         }
     ],
     "require": {
-        "php": "^8.0",
-        "doctrine/dbal": "^3.1",
-        "guzzlehttp/guzzle": "^6.5.5",
-        "illuminate/database": "^8.0",
-        "illuminate/http": "^8.0",
-        "intonate/tinker-zero": "^1.2",
-        "laminas/laminas-text": "^2.8",
-        "laravel-zero/framework": "^8.7",
-        "thenetworg/oauth2-azure": "^2.0"
+        "php": ">=8.0",
+        "doctrine/dbal": ">=3.1",
+        "guzzlehttp/guzzle": ">=6.5.5",
+        "illuminate/database": ">=8.0",
+        "illuminate/http": ">=8.0",
+        "intonate/tinker-zero": ">=1.2",
+        "laminas/laminas-text": ">=2.8",
+        "laravel-zero/framework": ">=8.7",
+        "thenetworg/oauth2-azure": ">=2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "mockery/mockery": "^1.4.2",
-        "pestphp/pest": "^1.0"
+        "fakerphp/faker": ">=1.9.1",
+        "mockery/mockery": ">=1.4.2",
+        "pestphp/pest": ">=1.0"
     },
     "autoload": {
         "psr-4": {
@@ -44,7 +40,10 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
