--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
     "name": "turtlebytes/fire",
     "description": "Work with the main task management systems like jira, azure, and aha",
-    "keywords": ["jira", "azure", "aha", "task management management", "console", "cli"],
+    "keywords": [
+        "jira",
+        "azure",
+        "aha",
+        "task management management",
+        "console",
+        "cli"
+    ],
     "homepage": "https://github.com/zach2825/dumpster-fire",
     "type": "project",
     "license": "MIT",
@@ -20,17 +27,22 @@
         "intonate/tinker-zero": ">=1.2",
         "laminas/laminas-text": ">=2.8",
         "laravel-zero/framework": ">=8.7",
+        "laravel/pint": "^1.2",
         "thenetworg/oauth2-azure": ">=2.0"
     },
     "require-dev": {
         "fakerphp/faker": ">=1.9.1",
         "mockery/mockery": ">=1.4.2",
-        "pestphp/pest": ">=1.0"
+        "pestphp/pest": ">=1.0",
+        "rector/rector": "^0.14.8"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
+    },
+    "scripts": {
+        "cleanup": "pint"
     },
     "autoload-dev": {
         "psr-4": {
@@ -47,5 +59,7 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "bin": ["taskr"]
+    "bin": [
+        "taskr"
+    ]
 }
